--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,90 @@
-.grid{
+ 
+ body {
+     margin: 0;
+     padding: 0;
+ }
+ main{
+    display: flex;
+     padding-bottom: 200px;
+     padding-top: 10px;
+     background-color: lightgray;
+     flex-direction: row;
+     justify-content: center;
+ }
+ header {
+    font-family: 'DotGothic16', sans-serif;
+    background-color: grey;
+    padding: 0.5%;
+    padding-left: 2%;
+ } 
+ a {
+    color: black;
+    text-decoration: none;
+ }
+ a:hover{
+    text-decoration: underline;
+  }
+  p {
+      max-width: 300px;
+      font-size: large;
+  }
+  footer {
+    display: flex;
+    width: 100%;
+    background-color: grey;
+    padding: 30px;
+    justify-content: center;
+  }
+.container {
+    width: 500px;
+    align-content: center;
+  }
+  
+  .grid {
     height: 400px;
     width: 400px;
     display: flex;
     flex-wrap: wrap;
-    background-color: grey;
-}
-.grid div {
+    background-color: #ffae00;
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  
+  div {
+    font-size: 25px;
+    text-align: center;
+    font-family: 'DotGothic16', sans-serif;;
+  
+  }
+  .valid {
     height: 40px;
     width: 40px;
-}
+    border: 2px solid;
+    box-sizing: border-box;
+  }
+  
+  .checked {
+    height: 40px;
+    width: 40px;
+    border: 2px solid;
+    background-color: #b9b7ce;
+    box-sizing: border-box;
+  }
+  
+  .bomb {
+    height: 40px;
+    width: 40px;
+    border: 2px solid;
+    box-sizing: border-box;
+  }
+  #result {
+    margin-top: 5px;
+    color: #e76346;
+  }
+  .change-size{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 
-.bomb {
-    background-color: orange;
-}
+  }
